gallery-manager/kubernetes/jld-manage-ui.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jld-manage-ui
  namespace: $NAMESPACE
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: jld-manage-ui
    spec:
      containers:
      - name: jld-manage-ui
        image: registry.jianke.com/library/jld-manage-ui:$IMAGE_TAG
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jld-manage-ui
  namespace: $NAMESPACE
  labels:
    run: jld-manage-ui
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    run: jld-manage-ui
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jld-manage-ui
  namespace: $NAMESPACE
spec:
  rules:
  - host: cgcs.dev.jianke.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jld-manage-ui
          servicePort: 8080
